convert constant into hex

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ board = leonardo
 monitor_speed = 115200
 board_build.mcu = atmega32u4
 board_build.f_cpu = 16000000L
-monitor_filters = hexlify
+; monitor_filters = hexlify
 build_src_filter =  +<*> -<main.leds.cpp> -<main.lcd.cpp> -<main.lcd16x2.cpp>
 ; build_src_filter = -<*> +<main.lcd.cpp> ; LCD Driver
 ; build_src_filter = -<*> +<main.lcd16x2.cpp> ; LCD 16x2 Driver
