--- a/platformio.ini
+++ b/platformio.ini
@@ -21,13 +21,14 @@ board_build.f_cpu = 16000000L
 monitor_filters = hexlify
 build_src_filter =  = -<*> +<SPIFlash.cpp> +<main.cpp> 
 ; build_src_filter = -<*> +<SPIFlash.cpp> +<main.IRremote.cpp> ; IRremote Driver
-; build_src_filter = -<*> +<SPIFlash.cpp> +<main.lcd.cpp> ; LCD Driver
 ; build_src_filter = -<*> +<SPIFlash.cpp> +<main.lcd16x2.cpp> ; LCD 16x2 Driver
 ; build_src_filter = -<*> +<SPIFlash.cpp> +<main.leds.cpp> ; Leds Driver
+; build_src_filter = -<*> +<SPIFlash.cpp> +<main.simpleTFT.cpp> ; TFT Driver
 
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
-monitor_filters = hexlify
-build_src_filter =  = -<*> +<SPIFlash.cpp> +<main.cpp> 
+; monitor_filters = hexlify
+; build_src_filter =  = -<*> +<SPIFlash.cpp> +<main.cpp> 
+; build_src_filter = -<*> +<SPIFlash.cpp> +<main.simpleTFT.cpp> ; TFT Driver
